k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sw2p2-gateway-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:528961352146:certificate/fc24bb18-37c7-4026-b734-f0ae73e945f2
    alb.ingress.kubernetes.io/healthcheck-path: /health
spec:
  rules:
  - host: api.sw2ficct.lat
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sw2p2-gateway-service
            port:
              number: 80
